# TrafficViolaction-Push

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
examples/: standalone.py
traffic_violation/: __init__.py  core.py  exceptions.py  models.py
