[project]
name = "traffic-violation-reporter"
version = "1.1.0"
description = "台中市交通違規檢舉自動化工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["traffic", "violation", "report", "automation", "taiwan", "taichung"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/traffic-violation-reporter"
Documentation = "https://github.com/yourusername/traffic-violation-reporter/wiki"
Repository = "https://github.com/yourusername/traffic-violation-reporter.git"
Issues = "https://github.com/yourusername/traffic-violation-reporter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["traffic_violation*"]
exclude = ["examples*", "tests*", "docs*"]
